--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,13 @@
 html,
 body {
   padding: 0;
-  margin: 0;
+  margin: 0 1rem;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 a {
@@ -14,17 +18,12 @@ a:hover {
   text-decoration: underline;
 }
 
-* {
-  box-sizing: border-box;
-}
-
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
   body {
-    color: hsla(0, 0%, 100%, 0.7);
-    /* background: rgb(0, 0, 0); */
-    background: #121212;
+    color: hsla(0, 0%, 100%, 0.9);
+    background: hsl(0, 0%, 8%);
   }
 }
